--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,5 @@ categories: DQN RL
 
 
 theme: jekyll-theme-minimal
-title: Ed Kim's RL story
-description: Articles, codes, news about AI, especially RL.
-
+title: Reinforcement Learning by Ed Kim
+description: Hi and welcome to my website! I am Edward and I have interest in reinforcement learning and financial markets. My previous work experiences are as an actuary and I am stepping towards Quant space! I hope you get useful information from reading my posts!
