--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 layout: post
 title: "Implementing DQN from scratch"
 date: 2021-12-30 21:39:12 -0000
-categories: "DQN" "RL"
+categories: DQN RL
 
 
 theme: jekyll-theme-minimal
