--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,42 @@ categories: DQN RL
 theme: jekyll-theme-minimal
 title: Reinforcement Learning by Ed Kim
 description: Hi and welcome to my website! I am Edward and I have interest in reinforcement learning and financial markets. My previous work experiences are as an actuary and I am stepping towards Quant space! I hope you get useful information from reading my posts!
+
+
+title: Hello, world! I'm David Freeman
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+permalink: ':title/'
+baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+site-twitter: #if your site has a twitter account, enter it here
+
+# Author Settings
+author: Kibeom Kim # add your name
+author-img: david-freeman.jpg # add your photo
+about-author: I am an aspiring quant focusing on reinforcement learning. Open to Artificial intelligence and its application on asset management and trading. # add description
+social-twitter: # add your Twitter handle
+social-facebook: # add your Facebook handle
+social-github: kibeomkim14 # add your Github handle
+social-linkedin: https://www.linkedin.com/in/edward-kim-013487113/ # add your Linkedin handle
+social-email: kkb99705119@gmail.com# add your Email address
+
+# Disqus
+discus-identifier: mr-brown # add your discus identifier
+
+# Tracker
+analytics: # Google Analytics
+
+# Build Settings
+markdown: kramdown
+plugins:
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jemoji
+
+paginate: 8
+paginate_path: "/page/:num"
+
+exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
