--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,9 @@ title: Reinforcement Learning by Ed Kim
 description: Hi and welcome to my website! I am Edward and I have interest in reinforcement learning and financial markets. My previous work experiences are as an actuary and I am stepping towards Quant space! I hope you get useful information from reading my posts!
 
 
-title: Hello, world! I'm David Freeman
+title: Kib's Reinforcement Learning
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Wanna learn about cool AI applications in finance? You are on the right spot.
 permalink: ':title/'
 baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
