--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,9 @@
-layout: post
-title: "Implementing DQN from scratch"
-date: 2021-12-30 21:39:12 -0000
-categories: DQN RL
-
-
 title: Kib's Reinforcement Learning
 description: > # this means to ignore newlines until "baseurl:"
   Wanna learn about cool AI applications in finance? You are on the right spot.
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/RL_tools" # the subpath of your site, e.g. /blog
+url: "https://kibeomkim14.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
