--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,22 @@
-title: Kib's Reinforcement Learning
+title: Hello, world! I'm David Freeman
 description: > # this means to ignore newlines until "baseurl:"
-  Wanna learn about cool AI applications in finance? You are on the right spot.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://kibeomkim14.github.io/RL_tools" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: Kibeom Kim # add your name
+author: David Freeman # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: I am an aspiring quant focusing on reinforcement learning. Open to Artificial intelligence and its application on asset management and trading. # add description
+about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: kibeomkim14 # add your Github handle
-social-linkedin: https://www.linkedin.com/in/edward-kim-013487113/ # add your Linkedin handle
-social-email: kkb99705119@gmail.com # add your Email address
+social-github: artemsheludko # add your Github handle
+social-linkedin: # add your Linkedin handle
+social-email: # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
