--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, world! I'm David Freeman
+title: Ed's Reinforcement Learning
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -9,14 +9,14 @@ url: "https://kibeomkim14.github.io" # the base hostname & protocol for your sit
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
+author: Kibeom Kim # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+about-author: I am Kibeom, an aspiring quant focusing on reinforcement learning, applications on finance.  # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-github: kibeomkim14 # add your Github handle
+social-linkedin: https://www.linkedin.com/in/edward-kim-013487113/ # add your Linkedin handle
+social-email: kkb99705119@gmail.com # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
