--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social-linkedin: /edward-kim-013487113/ # add your Linkedin handle
 social-email: kkb99705119@gmail.com # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: kibeomkim14 # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
