--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ url: "https://kibeomkim14.github.io" # the base hostname & protocol for your sit
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: Kibeom Kim # add your name
+author: Kibeom Kim🇨🇭🇬🇧🇰🇷# add your name
 author-img: kibeom-kim.jpg # add your photo
-about-author: I am Kibeom, an aspiring quant focusing on reinforcement learning, applications on finance.  # add description
+about-author: 4th gen quant. My interest lies in machine learning and finance. My primary interest goes for reinforcement learning and its applications in finance.  # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: kibeomkim14 # add your Github handle
