--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: Kib's Reinforcement Learning
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hey 👋  Welcome to my blog! 🤗 Learn about my journey towards mastering reinforcement learning! 💪
 permalink: ':title/'
 baseurl: "/RL_tools" # the subpath of your site, e.g. /blog
 url: "https://kibeomkim14.github.io" # the base hostname & protocol for your site, e.g. http://example.com
@@ -11,7 +9,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Kibeom Kim🇨🇭🇬🇧🇰🇷 # add your name
 author-img: kibeom-kim.jpg # add your photo
-about-author: 4th gen quant. My interest lies in machine learning and finance. My primary interest goes for reinforcement learning and its applications in finance.  # add description
+about-author: 4th gen quant. My interest lies in machine learning and finance. 
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: kibeomkim14 # add your Github handle
