--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,16 @@ analytics: # Google Analytics
 
 # Build Settings
 markdown: kramdown
+highlighter: rouge
 plugins:
   - jekyll-sitemap
   - jekyll-paginate
   - jemoji
+
+# Markdown Processing
+kramdown:
+  input: GFM
+  math_engine: mathjax
 
 paginate: 8
 paginate_path: "/page/:num"
