--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Kibeom Kim🇨🇭🇬🇧🇰🇷 # add your name
 author-img: kibeom-kim.jpg # add your photo
-about-author: 4th gen quant. My interest lies in machine learning and finance. 
+about-author: 4th gen quant. 
+My interest lies in machine learning and finance. 
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: kibeomkim14 # add your Github handle
