--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,11 @@ analytics: # Google Analytics
 
 # Build Settings
 markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
 plugins:
   - jekyll-sitemap
   - jekyll-paginate
