--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ social-linkedin: /edward-kim-013487113/ # add your Linkedin handle
 social-email: kkb99705119@gmail.com # add your Email address
 
 # Disqus
-discus-identifier: kibeomkim14 # add your discus identifier
+discus-identifier: kibeomkim_14 # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
