--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,7 @@ social-github: kibeomkim14 # add your Github handle
 social-linkedin: /edward-kim-013487113/ # add your Linkedin handle
 social-email: kkb99705119@gmail.com # add your Email address
 
-comments:
-  provider: "disqus" # 블로그 댓글 기능 false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
-  disqus:
-    shortname: "https-kibeomkim14-github-io-rl-tools" 
+disqus: "kibeomkim_14" 
 
 # Tracker
 analytics: # Google Analytics
